fix: header z-index issue

--- a/src/templates/_header.scss
+++ b/src/templates/_header.scss
@@ -3,8 +3,8 @@
 	background: none;
 	border-bottom: none;
 	padding-bottom: 0;
-	// z-index: 1;
-	// position: relative;
+	z-index: 1;
+	position: relative;
 
 	.contact-header-wrapper {
 		width: 100%;
